--- a/.gitignore
+++ b/.gitignore
@@ -34,3 +34,9 @@ readme.html
 
 # Lazarus local files (user-specific info)
 *.lps
+
+# Lazarus backups and unit output folders.
+# These can be changed by user in Lazarus/project options.
+backup/
+*.bak
+lib/
