--- a/source/_uTerminal.lpi
+++ b/source/_uTerminal.lpi
@@ -105,12 +105,10 @@
     <VersionInfo>
       <UseVersionInfo Value="True"/>
       <AutoIncrementBuild Value="True"/>
-      <MajorVersionNr Value="1"/>
-      <MinorVersionNr Value="8"/>
-      <RevisionNr Value="11"/>
-      <BuildNr Value="88"/>
+      <MajorVersionNr Value="2"/>
+      <BuildNr Value="89"/>
       <Language Value="0419"/>
-      <StringTable CompanyName="https://riva-lab.gitlab.io" FileDescription="терминал и плоттер для последовательного порта" InternalName="uTerminal" LegalCopyright="Riva, 2017-2018, 2021-2023" ProductName="uTerminal"/>
+      <StringTable CompanyName="https://riva-lab.gitlab.io" FileDescription="Serial port terminal and plotter" InternalName="uTerminal" LegalCopyright="Riva, 2017-2018, 2021-2023" ProductName="uTerminal"/>
     </VersionInfo>
     <BuildModes Count="1">
       <Item1 Name="win32-Debug" Default="True"/>
