fix plotter scrollbars bug, update versions.md

--- a/source/_uTerminal.lpi
+++ b/source/_uTerminal.lpi
@@ -108,7 +108,8 @@
       <AutoIncrementBuild Value="True"/>
       <MajorVersionNr Value="2"/>
       <MinorVersionNr Value="1"/>
-      <BuildNr Value="92"/>
+      <RevisionNr Value="1"/>
+      <BuildNr Value="93"/>
       <Language Value="0419"/>
       <StringTable Comments="Serial port terminal and plotter" CompanyName="Riva Lab :: riva-lab.gitlab.io" FileDescription="Serial port terminal and plotter" InternalName="uTerminal" LegalCopyright="Riva, 2017-2025" OriginalFilename="uTerminal" ProductName="uTerminal"/>
     </VersionInfo>
