--- a/source/_uTerminal.lpi
+++ b/source/_uTerminal.lpi
@@ -25,7 +25,7 @@
     <i18n>
       <EnableI18N Value="True"/>
       <OutDir Value="..\bin\lang"/>
-      <ExcludedIdentifiers Count="74">
+      <ExcludedIdentifiers Count="80">
         <Item1 Value="tfmmain.acconnect.caption"/>
         <Item2 Value="tfmmain.actogglebreak.caption"/>
         <Item3 Value="tfmmain.actoggledtr.caption"/>
@@ -100,6 +100,12 @@
         <Item72 Value="tfmconfirm.lbmessage.caption"/>
         <Item73 Value="tfmupdate.lbsize.caption"/>
         <Item74 Value="tfmmain.cbsearchregex.caption"/>
+        <Item75 Value="tfmmain.cbtxtype.text"/>
+        <Item76 Value="tfmmain.cbrxtype.text"/>
+        <Item77 Value="tfmmain.cbtxencoding.text"/>
+        <Item78 Value="tfmmain.cbrxencoding.text"/>
+        <Item79 Value="tfmsettings.cbcsvlinebreak.text"/>
+        <Item80 Value="tfmsettings.cblinebreakstyle.text"/>
       </ExcludedIdentifiers>
     </i18n>
     <VersionInfo>
